# RayTracing

./: .gitattributes  .gitignore  CMakeLists.txt  RayTracer.ini  build.sh  build_and_run.sh  fpsBenchmark.csv  object_settings.md  profilingResults.txt  readme.md  run.sh
.cursor/skills/build-and-run/: SKILL.md
Include/: BounceLimitManager.h  BvhTree.h  Camera.h  FpsPrinter.h  IndexBuffer.h  InfoPrinter.h  KeyEventNotifier.h  KeyEventObserver.h  Materials.h  Math3D.h  Object.h  ObjectLoader.h  Recorder.h  Renderer.h  Scene.h  Shader.h  Shape.h  TextureUnitManager.h  Tri.h  Utils.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
Include/ConfigParser/: ConfigParser.hpp
Objects/: Dragon.off  DragonGlass.off  LightBox.txt  LightBox2.txt  LightBox3.txt  LightBox4.txt  Sponza.off  Teapot.txt  cube_light_B.txt  cube_light_G.txt  cube_light_R.txt  guy.off  room.txt  surface.txt  teapot.txt  teapot1.txt  teapot2.txt
src/: BounceLimitManager.cpp  BvhTree.cpp  Camera.cpp  KeyEventNotifier.cpp  KeyEventObserver.cpp  ObjectLoader.cpp  Scene.cpp  Shader.cpp  TextureUnitManager.cpp  VertexBuffer.cpp  main.cpp
src/ConfigParser/: ConfigParser.cpp
src/shaders/: Fragment.glsl  Vertex.glsl  bloomFragment.glsl  bloomVertex.glsl  extractBrightFragment.glsl  finalFragment.glsl
